--- a/package.xml
+++ b/package.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0"?>
-<package>
-  <name>optoforce_etherdaq_driver</name>
+<package format="3">
+  <name>optoforce_etherdaq_ros2_driver</name>
   <version>1.0.0</version>
-  <description>The optoforce_etherdaq_driver package</description>
+  <description>The optoforce_etherdaq_ros2_driver package</description>
 
-  <maintainer email="ros@optoforce.com">OptoForce</maintainer>
-
+  <maintainer email="rwu@ipa.fraunhofer.com">OptoForce</maintainer>
   <license>BSD</license>
 
   <author email="ros@optoforce.com">OptoForce</author>
 
+  <!-- Build tool dependencies -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>curl</build_depend>
-  <build_depend>diagnostic_msgs</build_depend>
-  <build_depend>diagnostic_updater</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>tinyxml</build_depend>
-  
-  <run_depend>curl</run_depend>
-  <run_depend>diagnostic_msgs</run_depend>
-  <run_depend>diagnostic_updater</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>tinyxml</run_depend>
+  <!-- Build and run dependencies -->
+  <depend>rclcpp</depend>
+  <depend>diagnostic_msgs</depend>
+  <depend>geometry_msgs</depend>
 
+  <!-- TinyXML2 is commonly used in ROS 2, available via the tinyxml2_vendor package if needed -->
+  <depend>tinyxml2_vendor</depend>
+  <!-- For CURL, if there's no direct ROS 2 package, you typically handle it as a system dependency -->
+  <!-- This might not be directly declared in package.xml but managed via CMake or a vendor package -->
+
+  <depend>diagnostic_updater</depend>
+
+  <!-- If curl is handled as a system dependency, you do not need to declare it here unless you create a vendor package for it -->
+
+  <!-- Export dependencies -->
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
